--- a/cohy/templates/cohy/index.html
+++ b/cohy/templates/cohy/index.html
@@ -1,34 +1,78 @@
-<!doctype html>
+<!DOCTYPE html>
 {% load staticfiles %}
-<html ng-app>
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.7/angular.min.js"></script>
-    <script src="{%static "cohy/todo.js" %}"></script>
-    <link rel="stylesheet" type="text/css" href="{%static "cohy/todo.css" %}">
-  </head>
-  <body>
-    <h2>Todo</h2>
+<html ng-app="cohyApp">
+<head>
 
-    <div ng-controller="TodoCtrl">
-        {% verbatim %}
-        <div ng-if="todos.length > 0">
-      <span>{{remaining()}} of {{todos.length}} remaining</span>
-      [ <a href="" ng-click="archive()">archive</a> ]
-      <ul class="unstyled">
-        <li ng-repeat="todo in todos">
-          <input type="checkbox" ng-model="todo.done">
-          <span class="done-{{todo.done}}">{{todo.text}}</span>
-        </li>
-      </ul>
-      </div>
+</head>
+<body role="document">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">CoHy</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Modules<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{% url 'cohy:station_list' %}">Stations</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li class="dropdown-header">Nav header</li>
+                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
 
-      <form ng-submit="addTodo()">
-        <input type="text" ng-model="todoText"  size="30"
-               placeholder="add new todo here">
-        <input class="btn-primary" type="submit" value="add">
-      </form>
-        {% endverbatim %}
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
     </div>
+</div>
+<div class="container theme-showcase" role="main">
+    <div ng-view></div>
+</div>
 
-  </body>
+<link rel="stylesheet" href="{% static 'cohy/theme.css'%}">
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.7/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.7/angular-route.js"></script>
+<script>
+var cohyApp = angular.module('cohyApp', [
+    'ngRoute',
+    'cohyControllers'
+]);
+cohyApp.constant('urls', {
+    partial_stations: "{% static 'cohy/partials/stations.html' %}"
+});
+</script>
+<script src="{% static 'cohy/app.js'%}"></script>
+<script src="{% static 'cohy/controler.js'%}"></script>
+
+
+
+</body>
 </html>
