--- a/cohy/templates/cohy/index.html
+++ b/cohy/templates/cohy/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load staticfiles %}
+{% load url from future %}
 <html ng-app="cohyApp">
 <head>
 
@@ -20,10 +21,11 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Modules<b class="caret"></b></a>
+                    <a href="" class="dropdown-toggle" data-toggle="dropdown">Modules<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'cohy:station_list' %}">Stations</a></li>
-                        <li><a href="#">Another action</a></li>
+
+                        <li><a href="#stations">Stations</a></li>
+                        <li><a href="#"><script>document.write(gettext('this is to be translated'));</script></a></li>
                         <li><a href="#">Something else here</a></li>
                         <li class="divider"></li>
                         <li class="dropdown-header">Nav header</li>
@@ -51,6 +53,8 @@
 <!-- Optional theme -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
 
+<script type="text/javascript" src="{% url 'cohy:django.views.i18n.javascript_catalog' %}"></script>
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
@@ -66,7 +70,8 @@ var cohyApp = angular.module('cohyApp', [
     'cohyControllers'
 ]);
 cohyApp.constant('urls', {
-    partial_stations: "{% static 'cohy/partials/stations.html' %}"
+    partial_stations: "{% static 'cohy/partials/stations.html' %}",
+    partial_home: "{% static 'cohy/partials/home.html' %}"
 });
 </script>
 <script src="{% static 'cohy/app.js'%}"></script>
