Internacionalização no angular resolvida e funcionando (fixes #4). Algumas lições: - Perdi um bom tempo para usar os componentes do "bootstrap form helps" no angular. Fica muito complicado e não é uma boa ideia, pois é preciso manipular o DOM diretamente para conseguir fazer a integração. Resolvi usar somente os componenets do "angular bootstrap UI" que são os componentes básicos do bootstrap implementados nativamente no angular. Caso seja necessário um componente que não exista nessa biblioteca, é melhor implementar ele nativamente no angular do que tentar integrar.

--- a/cohy/static/cohy/partials/stations.html
+++ b/cohy/static/cohy/partials/stations.html
@@ -1,6 +1,6 @@
 <div>
-    <h1>Station List</h1>
-    <button class="btn btn-sm btn-primary" type="button">New</button>
+    <h1><span translate>station.list</span></h1>
+    <button class="btn btn-sm btn-primary" type="button"><span translate>new</span></button>
     <ul>
         <li ng-repeat="station in station_list">
             <p>{{station.code}}</p>
