--- a/cohy/static/cohy/partials/home.html
+++ b/cohy/static/cohy/partials/home.html
@@ -1,8 +1,9 @@
 <div class="jumbotron">
     <h1>CoHy</h1>
 
-    <p>COHY stands for Computational Hydrology.</p>
-    {{ gettext('bruto') }}
+    <p><span translate>cohy.description</span> </p>
 
-    <p><a href="#" class="btn btn-primary btn-lg" role="button">Learn more >></a></p>
+    <p><a href="#" class="btn btn-primary btn-lg" role="button"><span translate>learn.more</span> >></a></p>
+
+
 </div>
