--- a/cohy/templates/cohy/index_cp.html
+++ b/cohy/templates/cohy/index_cp.html
@@ -7,13 +7,14 @@
 
     <!-- Latest compiled and minified CSS -->
 
-    <link rel="stylesheet" href="{% static 'cohy/css/bootstrap.3.1.1.min.css'%}">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
     <!--<link rel="stylesheet" href="http://bootstrapformhelpers.com/assets/css/bootstrap.3.1.1.min.css">-->
 
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="{% static 'cohy/css/bootstrap-theme.3.1.1.min.css'%}">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static 'cohy/css/bootstrap-formhelpers.min.css'%}">
 
 
 </head>
@@ -34,12 +35,11 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li class="dropdown">
-                    <a href="" class="dropdown-toggle" data-toggle="dropdown"><span translate>modules</span><b
-                            class="caret"></b></a>
+                    <a href="" class="dropdown-toggle" data-toggle="dropdown"><span translate>modules</span><b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="#stations">
                             <span translate>stations</span>
-                        </a></li>
+                            </a></li>
 
                         <li><a href="#">Something else here</a></li>
                         <li class="divider"></li>
@@ -51,25 +51,10 @@
                 <li><a href="#about"><span translate>about</span></a></li>
                 <li><a href="#contact"><span translate>contact</span></a></li>
 
-
             </ul>
         </div>
         <!--/.nav-collapse -->
     </div>
-</div>
-
-
-<!-- Split button -->
-<div ng-controller="HomeCtrl" style="font-size:11px; text-align: right; width: 95%; padding:0px; border: 0px;margin: 0px">
-    <span class="dropdown" on-toggle="toggled(open)">
-      <a href class="dropdown-toggle">
-        <span translate>choose.language</span>
-      </a>
-      <ul class="dropdown-menu">
-          <li><a href ng-click="changeLanguage('pt_BR')"><span translate>lang.pt_BR</span></a></li>
-          <li><a href ng-click="changeLanguage('en_US')"> <span translate>lang.en_US</span></a></li>
-      </ul>
-    </span>
 </div>
 
 <div class="container theme-showcase" role="main">
@@ -80,33 +65,31 @@
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <!-- 1.11.0 -->
-
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
 <!-- Latest compiled and minified JavaScript -->
 <!-- 3.1.1 -->
-<!--<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>-->
+
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <!--<script src="http://bootstrapformhelpers.com/assets/js/bootstrap.min.js"></script>-->
 
-<script src="{% static 'cohy/js/angular.1.3.0-beta.7.min.js' %}"></script>
-<script src="{% static 'cohy/js/angular-route.1.3.0-beta.7.js' %}"></script>
-<script src="{% static 'cohy/js/ui-bootstrap-0.11.0.min.js'%}"></script>
 
+<script src="{% static 'cohy/js/bootstrap-formhelpers.min.js'%}"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.7/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.7/angular-route.js"></script>
 <script>
-    var cohyApp = angular.module('cohyApp', [
-        'ngRoute',
-        'cohyControllers',
-        'pascalprecht.translate',
-        'ui.bootstrap'
-    ]);
-    cohyApp.constant('urls', {
-        partial_stations: "{% static 'cohy/partials/stations.html' %}",
-        partial_home: "{% static 'cohy/partials/home.html' %}"
-    });
-
-
+var cohyApp = angular.module('cohyApp', [
+    'ngRoute',
+    'cohyControllers',
+    'pascalprecht.translate'
+]);
+cohyApp.constant('urls', {
+    partial_stations: "{% static 'cohy/partials/stations.html' %}",
+    partial_home: "{% static 'cohy/partials/home.html' %}"
+});
 </script>
-<script src="{% static 'cohy/js/angular-translate.2.1.0.js'%}"></script>
+<script src="{% static 'cohy/js/angular-translate.js'%}"></script>
 <script src="{% static 'cohy/js/messages.js'%}"></script>
 <script src="{% static 'cohy/js/app.js'%}"></script>
 <script src="{% static 'cohy/js/controler.js'%}"></script>
