--- a/cohy/static/cohy/partials/station_list.html
+++ b/cohy/static/cohy/partials/station_list.html
@@ -1,6 +1,6 @@
 <div>
     <h1><span translate>station.list</span></h1>
-    <button class="btn btn-sm btn-primary" type="button"><span translate>new</span></button>
+    <button  ng-click="go('/station/new')" class="btn btn-sm btn-primary" type="button"><span translate>new</span></button>
     <ul>
         <li ng-repeat="station in station_list">
             <p>{{station.code}}</p>
