--- a/cohy/templates/cohy/index.html
+++ b/cohy/templates/cohy/index.html
@@ -88,7 +88,9 @@
 <!--<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>-->
 <!--<script src="http://bootstrapformhelpers.com/assets/js/bootstrap.min.js"></script>-->
 
+<script src="{% static 'cohy/js/angular-file-upload-shim.1.4.0.min.js' %}"></script>
 <script src="{% static 'cohy/js/angular.1.3.0-beta.7.min.js' %}"></script>
+<script src="{% static 'cohy/js/angular-file-upload.1.4.0.min.js' %}"></script>
 <script src="{% static 'cohy/js/angular-route.1.3.0-beta.7.js' %}"></script>
 <script src="{% static 'cohy/js/ui-bootstrap-0.11.0.min.js'%}"></script>
 
@@ -97,11 +99,13 @@
         'ngRoute',
         'cohyControllers',
         'pascalprecht.translate',
-        'ui.bootstrap'
+        'ui.bootstrap',
+        'angularFileUpload'
     ]);
     cohyApp.constant('urls', {
-        partial_stations: "{% static 'cohy/partials/stations.html' %}",
-        partial_home: "{% static 'cohy/partials/home.html' %}"
+        station_list: "{% static 'cohy/partials/station_list.html' %}",
+        station_new: "{% static 'cohy/partials/station_new.html' %}",
+        home: "{% static 'cohy/partials/home.html' %}"
     });
 
 
